--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "nuxt": "3.0.0-rc.9",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.3"
   }
 }
