--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.3"
+    "@headlessui/vue": "^1.7.3",
+    "vue-router": "^4.1.5"
   }
 }
