--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
+    "@types/qrcode": "^1.5.0",
+    "qrcode": "^1.5.1",
     "vue-router": "^4.1.5"
   }
 }
